--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "prod": "vite preview"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
+    "@types/node": "^20.12.7",
     "@workadventure/iframe-api-typings": "^1.18.11",
+    "autoprefixer": "^10.4.19",
     "dotenv": "^16.3.1",
+    "glob": "^10.3.12",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^4.9.5",
     "vite": "^4.5.2",
     "wa-map-optimizer-vite": "^1.1.28"
