--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -33,7 +33,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: dist/ # The folder the action should deploy.
-          BASE_BRANCH: test-events
+          BASE_BRANCH: master
 
       - name: Bash2
         run: |
