--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,8 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": [
-      "ESNext",
-      "DOM"
-    ],
+    "lib": ["ESNext", "DOM"],
+    "types": ["vite/client"],
     "allowJs": true,
     "moduleResolution": "Node",
     "strict": true,
@@ -29,7 +27,5 @@
     "noImplicitReturns": true,
     "skipLibCheck": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
