--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "wa-map-optimizer-vite": "^1.1.28"
   },
   "dependencies": {
+    "@sindresorhus/slugify": "^2.2.1",
     "@workadventure/scripting-api-extra": "^1.8.1",
     "fuse.js": "^7.0.0"
   }
